deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doggy-countdown
  labels:
    app.kubernetes.io/name: doggy-countdown
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: doggy-countdown
